--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
